renamed fclingo to flingo

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -9,7 +9,7 @@ env:
 
 jobs:
   build:
-    name: fclingo on ${{ matrix.os }}
+    name: flingo on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
