--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = fclingo
+name = flingo
 version = 0.1
 author = Philipp Wanko
 author_email = wanko@cs.uni-potsdam.de
@@ -7,7 +7,7 @@ description = Solver for ASP modulo conditional linear constraints with founded 
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = MIT
-url = http://github.com/krr-up/fclingo
+url = http://github.com/krr-up/flingo
 
 
 [options]
@@ -40,8 +40,8 @@ doc =
     sphinx_rtd_theme
     nbsphinx
 dev =
-    fclingo[test,lint_pylint,lint_flake8]
+    flingo[test,lint_pylint,lint_flake8]
 
 [options.entry_points]
 console_scripts =
-    fclingo = fclingo:__main__.main
+    flingo = flingo:__main__.main
