--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "flingo"
+version = "v1.0.0"
 authors = [{ name = "Philipp Wanko", email = "wanko@cs.uni-potsdam.de" }]
 description = "flingo is a solver for Answer Set Programming (ASP) combined with founded conditional linear constraints"
 requires-python = ">=3.12"
 license = { file = "LICENSE" }
-dynamic = ["version"]
 readme = "README.md"
 dependencies = ["clingo","clingcon"]
 
@@ -27,7 +27,7 @@ dev = ["typclingo[test,typecheck,lint_pylint]"]
 flingo = "flingo.__main__:main"
 
 [tool.setuptools.packages.find]
-where = ["."]
+where = ["src"]
 
 [tool.setuptools_scm]
 version_scheme = "python-simplified-semver"
