--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -15,16 +15,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ['ubuntu-latest', 'windows-latest']
+        os: ["ubuntu-latest", "windows-latest"]
 
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
-      with:
-        python-version: 3.12
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.12
 
-    - name: install nox
-      run: python -m pip install nox
+      - name: install nox
+        run: python -m pip install nox
 
-    - name: run tests
-      run: nox -s test
+      - name: run tests
+        run: nox
